--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body {
     background-color: rgb(253, 251, 251);
-    margin: 276px 0 0 0;
+    margin: 300px 0 0 0;
    
 }
 
@@ -13,7 +13,7 @@ body {
     top:0;
     left: 0;
     width: 100%;
-    height: 200px;
+    height: 210px;
     background-image: linear-gradient(to right top, #f4acd6, #ec9ed4, #e391d4, #d885d4, #ca79d6, #bb6ed0, #ab64c9, #9b5ac3, #894cb2, #773fa1, #653290, #542580);
     color: #b9b6b6f3;
     text-align: center;
@@ -23,7 +23,7 @@ body {
 
 #titulo {
     font-family: 'Dancing Script', cursive;
-    font-size: 60px;
+    font-size: 63px;
     margin-bottom: 0;
     text-align: center;
 }
@@ -35,43 +35,53 @@ body {
 }
 
 #minha_foto {
-    height: 220px;
-    width: 220px;
+    height: 210px;
+    width: 210px;
     border: 5px solid #ffc700;
     border-radius: 50%;
     margin-top: 65px;
     position: absolute;
-    top: 10px;
+    top: 35px;
     left: 130px;
 }
 
 #navbar {
     background-color: rgba(197, 170, 223, 0.993);
+    width: 45%;
+    margin-left: 450px;
 }
 
 #navbar ul {
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
     border-style:groove;
-    height: 30px;
-    border-color: rgba(197, 170, 223, 0.377);;
+    height: 40px;
+    border-color: rgba(180, 171, 34, 0.377);;
     margin-top: 0;
 }
 
 #navbar li {
     width: 60px;
-    list-style-type: none; 
+    list-style-type: none;
+    padding-top: 10px;
+  
 }
 
 .link {
     text-decoration: none;
-    color: black;
+    color: #1b181886;
     text-align: center;
+    font-family: sans-serif;
     font-weight: 700;
+    font-size: 15px;
     text-transform: uppercase;
 }
-/*FALTA COLOCAR CENTRALIZADO O LINK NAVBAR . 
-O NAVBAR SUBIU*/
+
+.link:hover {
+    color: #ffc700;
+
+}
+
 
 #rodape {
     background-color:#000;
