--- a/style.css
+++ b/style.css
@@ -112,12 +112,13 @@ body {
     border: 1px solid black;
     border-collapse: collapse;
     margin-right: 50px;
+    margin-top: 50px;
 }
 
 td {
     font-family: serif;
     font-size: 15px;
-    padding:7px;
+    padding:14px;
     text-align: center;
 }
 
